# fast-cut

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  env_example.txt  install_ffmpeg.py  main.py  package.json  pyproject.toml  requirements.txt
examples/: platforms.json
scripts/: __init__.py  install_ffmpeg.py  setup.py  validate.py
src/fast_cut/: __init__.py
src/fast_cut/core/: __init__.py  config.py  file_manager.py  pipeline.py  protocols.py  reporter.py  system.py  types.py
src/fast_cut/services/: __init__.py  analyzer.py  cutter.py  downloader.py  transcriber.py
src/fast_cut/utils/: ffmpeg.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_file_manager.py  test_pipeline.py  test_transcriber.py  test_types.py
