[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-cut"
version = "1.0.0"
description = "Sistema de Geração Automática de Cortes para Redes Sociais"
authors = [{name = "Fast Cut System"}]
dependencies = [
    "yt-dlp>=2024.8.6",
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "faster-whisper>=1.0.0",
]

[project.scripts]
fast-cut = "main:main"
validate = "scripts.validate:main"
setup-project = "scripts.setup:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pre-commit>=3.4.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | temp
  | output
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fast_cut"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "moviepy.*",
    "librosa.*",
    "pydub.*",
    "yt_dlp.*",
    "faster_whisper.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "temp",
    "output",
]
